Add project files.

--- a/PaymentPage/Views/Home/CustInfo.cshtml
+++ b/PaymentPage/Views/Home/CustInfo.cshtml
@@ -6,6 +6,7 @@
 <p>
     First Name: <input type="text" id="first" /><br />
     Last Name: <input type="text" id="last" /> <br />
+    User Name: <input type="text" id="user" /><br />
     Street Address:<input type="text" id="street" /> <br />
     City:<input type="text" id="city" /> <br />
     State:<input type="text" id="state" /> <br />
