--- a/PaymentPage/Views/Home/PaymentInfo.cshtml
+++ b/PaymentPage/Views/Home/PaymentInfo.cshtml
@@ -4,8 +4,8 @@
 <h1>@ViewData["Title"]</h1>
 
 <p>
-    Card Number:<input type="text" id="first" /> <br />
-    Expiration Date:<input type="text" id="last" /> <br />
-    CVV code:<input type="text" id="street" /> <br />
-    Card Holder:<input type="text" id="city" /> <br />
+    Card Number:<input type="text" id="card" /> <br />
+    Expiration Date:<input type="text" id="exp" /> <br />
+    CVV code:<input type="text" id="cvv" /> <br />
+    Card Holder:<input type="text" id="holder" /> <br />
 <p/>
